--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,25 +1,28 @@
-name: npm-publish
+name: NPM publish CD workflow
+
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
+
 jobs:
-  npm-publish:
-    name: npm-publish
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Publish if version has been updated
-        uses: pascalgn/npm-publish-action@1.3.8
+      - uses: actions/checkout@v2
         with:
-          tag_name: 'v%s'
-          tag_message: 'v%s'
-          create_tag: 'true'
-          commit_pattern: "^Release (\\S+)"
-          workspace: '.'
-          # publish_command: 'yarn'
-          # publish_args: '--non-interactive'
+          ref: ${{ github.event.release.target_commitish }}
+      - name: Use Node.js 15
+        uses: actions/setup-node@v1
+        with:
+          node-version: 15
+      - run: git config --global user.name "GitHub CD bot"
+      - run: git config --global user.email "jeff.drumgod@gmail.com"
+      - run: npm version ${{ github.event.release.tag_name }}
+      - run: npm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_AUTH_TOKEN }}"
+      - run: npm publish --tag ${{ github.event.release.target_commitish }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - run: git push
+        env:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
